refactor: use sequenced-collection accessors where non-emptiness is proven
JDK 21 gives List getFirst()/getLast(). Nine accesses were converted, each
one guarded by a proof of non-emptiness that already sits in the code:

* AbstractMutationLog#getFirstAndLastWalFileIndex - the walFiles.length == 0
  early return above it; indexes has one element per WAL file.
* HierarchyIndex#traverseHierarchyToRoot - reachableChain.add(theNode) runs
  before the ancestor loop, so the chain is never empty.
* ReflectionLookup (3x) - each sits in the else of an isEmpty() test.
* AbstractEntityProxyState#proxies and Catalog#describeHistory (2x) - the
  isEmpty() guard is in the same ternary.

The one behavioural difference between get(0)/get(size() - 1) and the
sequenced accessors is the exception thrown on an empty collection
(NoSuchElementException instead of IndexOutOfBoundsException); none of the
converted sites can reach an empty collection, so no observable behaviour
changes. ArrayList.getLast() is verified by javap to be a size field read
plus elementData(i), i.e. one Objects.checkIndex call cheaper than
get(size() - 1) - no allocation is introduced anywhere.

Declined: the B+ tree cursor path.get(path.size() - 1) in
TransactionalLongBPlusTree, TransactionalElementBPlusTree,
TransactionalBucketBPlusTree and AbstractTransactionalBPlusTree, because
index/bPlusTree is a hot path and Cursor#path is an interface-typed list
whose default getLast() would add an isEmpty() virtual call. Also declined:
the two Collections.reverse call sites in the traffic engine, which mutate
in place and are not interchangeable with the reversed() view; every
"exactly one element" site, where get(0) means the sole element and
getFirst() would falsely imply an ordering; and descending index loops,
where reversed() would allocate a view wrapper per call.

Ref: #1518